fix: Update css to stop cutting off last downtime check

--- a/templates/assets/css/index.css
+++ b/templates/assets/css/index.css
@@ -3,7 +3,6 @@
     border: solid;
     border-radius: 20px;
     padding: 20px;
-    max-width: 90%;
 }
 
 .spacer {
